# barcode_gen

./: Cargo.toml  LICENSE-MIT  readme.md
src/: main.rs
